--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="new-wiki-form"> New Wiki </h1>
-   <div class="col-md-8">
+<h1 class="container title-all">Share Your Adventure</h1>
+   <div>
      <%= render partial: 'wikis/form' %>
    </div>
