--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -10,6 +10,7 @@
   padding-left: 200px;
   border-bottom: 1px solid rgba(1, 0, 1, .2);
   padding-top: 20px;
+  background-color: white;
 }
 .cat-idx {
   margin-left: 115px;
@@ -23,6 +24,7 @@
   padding-bottom: 10px;
   padding-top: 10px;
   border: 1px solid rgba(1, 0, 1, .1);
+  background-color: white;
 }
 .cat-idx img{
   height: 250px;
