--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,3 +9,20 @@
  h1, .top {
   font-size: 60px;
 }
+
+.welcome-slick {
+  background-color: rgba(254, 254, 254, 0.5);
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  min-width: 350px;
+  max-height: 290px;
+  font-size: 16px;
+  margin-left: 145px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(1, 0, 1, 0.1);
+  padding-left: 38px;
+  width: 80%;
+}
