--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -6,15 +6,18 @@
   display:table;
 }
 .wiki-title {
-  border-bottom: 1px solid rgba(1, 0, 1, .2);
-  padding-left: 200px;
+  border-bottom: 1px solid rgba(1, 0, 1, 0.2);
+  padding-left: 190px;
+  color: rgba(1, 0, 1, 0.6);
+  padding-bottom: 50px;
+  margin-top: 5px;
+  font-weight: normal;
 }
 .wiki-style {
   zoom: 1;
     overflow: hidden;
     background-color: rgba(254, 254, 254, 0.5);
     border-radius: 5px;
-    text-align: center;
     padding-top: 15px;
     padding-bottom: 15px;
     min-width: 350px;
@@ -47,6 +50,7 @@
   margin-left: 171px;
   padding-left: 35px;
   display: inline-block;
+  width: 100%;
   background-color: rgba(175, 170, 170, 0.3);
 }
 
@@ -60,7 +64,8 @@
 
 .wiki-info {
     border-bottom: 1px solid rgba(1, 0, 1, .2);
-    padding-bottom: 15px;
+    padding-bottom: 30px;
+    margin-top: -5px;
 }
 
 .wiki-info img {
@@ -84,7 +89,8 @@
 }
 
 .new-wiki-form {
-  margin-left: 30px;
+  margin-left: 100px;
+  width: 65%;
 }
 
 .wiki-image-top {
@@ -111,4 +117,17 @@
   position: absolute;
   margin-top: 500px;
   margin-left: 30px;
+}
+
+.link {
+  font-size: 22px;
+}
+
+.wiki-user-username {
+  float: right;
+  padding-right: 31px;
+}
+
+.small-text {
+  color: rgba(84, 82, 82, .7)
 }
