--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,26 +10,13 @@
 <body>
   <div class="container-bar">
       <ul class="nav nav-pills navbar-inverse navigation">
-      <li class="presentation"> <%= link_to "Travelog", welcome_index_path, :class=>'glyphicon glyphicon-globe' %></li>
+      <li class="presentation nav-logo"> <%= link_to "Travelog", welcome_index_path, :class=>'glyphicon glyphicon-globe' %></li>
       <li class="presentation"> <%= link_to "Explore", wikis_path %></li>
       <% if user_signed_in? %>
-      <div class="btn-group glyphicon glyphicon-bell pull-right" data-behavior="notifications">
-        <span data-behavior="unread-count"></span>
-        <button type="button" class="dropdown-toggle glyphicon glyphicon-chevron-down" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-behavior="notifications-link">
-        </button>
-        <ul class="dropdown-menu" data-behavior="notification-items">
-          <!--
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        -->
-        </ul>
-      </div>
-
-      <li class="presentation"> <%= link_to "Create", new_wiki_path %></li>
+      <li class="presentation"> <%= link_to "Share", new_wiki_path %></li>
       <div class="avatar-button btn-group pull-right">
         <button type="button" class="btn btn-default btn-avatar">  <%= image_tag(current_user.image.url(:thumb)) %></button>
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-behavior="notifications-link">
+        <button type="button" class="btn btn-default dropdown-toggle btn-avatar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-behavior="notifications-link">
           <span class="caret"></span>
           <span class="sr-only">Toggle Dropdown</span>
         </button>
@@ -40,6 +27,16 @@
             <li> <%= link_to "Upgrade to premium", new_charge_path %> </li>
           <ul>
       </div>
+      <div class="btn-group notification-btn pull-right" data-behavior="notifications">
+        <div class="glyphicon glyphicon-bell"></div>
+        <span data-behavior="unread-count"></span>
+        <button type="button" class="btn btn-default dropdown-toggle btn-avatar-notification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-behavior="notifications-link">
+          <span class="caret"></span>
+          <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <ul class="dropdown-menu" data-behavior="notification-items">
+        </ul>
+      </div>
      <% else %>
       <li role="presentation"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
       <li role="presentation"> <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %> </li>
@@ -48,17 +45,17 @@
  </div>
 
     <% if flash[:notice] %>
-      <div class="alert alert-success">
+      <div class="alert-wrapper">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:notice] %>
       </div>
     <% elsif flash[:error] %>
-      <div class="alert alert-danger">
+      <div class="alert-wrapper">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:error] %>
       </div>
     <% elsif flash[:alert] %>
-      <div class="alert alert-warning">
+      <div class="alert-wrapper">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:alert] %>
       </div>
