--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="wiki-title">Travel the world</h1>
+<h1 class="wiki-title">Explore</h1>
   <!-- <div class="container col-md-12 wiki-btn">
    <%= link_to "New Post", new_wiki_path, class: 'btn btn-success' %>
  </div> -->
@@ -6,12 +6,13 @@
   <%= render partial: 'layouts/sidebar' %>
  <% end %>
   <div class="main">
+    <h4>Most Recent</h4>
       <% @wikis.each do |wiki| %>
           <div class="wiki-style col-sm-3">
               <%= link_to image_tag(wiki.image.url(:medium)), wiki %>
               <h4 class="link"><%= link_to wiki.title, wiki %></h4>
               <div class="wiki-details">
-                <h5>Description:<%= wiki.description %> </h5>
+                <h5><%= wiki.description %> </h5>
                 <small><%=  link_to wiki.user.username, user_path(wiki.user)%></small>
                 <small><%= render partial: 'votes/like', locals: { wiki: wiki } %></small>
                 <small><%= wiki.comments.count %> Comments</small>
