--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -7,10 +7,12 @@
 }
 
 .cat-title {
-  padding-left: 200px;
-  border-bottom: 1px solid rgba(1, 0, 1, .2);
-  padding-top: 20px;
-  background-color: white;
+  border-bottom: 1px solid rgba(1, 0, 1, 0.2);
+  padding-left: 190px;
+  color: rgba(1, 0, 1, 0.6);
+  padding-bottom: 20px;
+  font-weight: normal;
+  background-color: rgba(251, 132, 13, .8)
 }
 .cat-idx {
   margin-left: 115px;
