--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,15 +1,34 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.comment-body {
-  margin: 0px;
-
-  a {
-    float: right;
-  }
+.comment-content a {
+  float: right;
+  font-size: 14px;
+  padding-top: 8px;
 }
 
 .comment-img {
   float: left;
   margin-right: 5px;
+
+    img {
+      height: 40px;
+      margin-right: 5px;
+      -webkit-border-radius: 150px;
+      -moz-border-radius: 150px;
+      box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+      -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+      -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    }
+}
+
+.comments-list {
+  margin-top: 60px;
+  background-color: white;
+  min-height: 200px;
+  padding: 10px;
+}
+
+.comment-body {
+  padding-bottom: 10px;
 }
