--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,8 @@
-<div class="media">
-   <div class="media-body">
-    <p class="comment-img"><%= image_tag(comment.user.image.url(:thumb)) %></p>
-    <p class="comment-body"><%= comment.body %>
-      <% if user_is_authorized_for_comment?(comment) %>
-       <%= link_to "Delete", [comment.wiki, comment], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this comment?' } %>
-     <% end %>
-    </p>
-     <small>
-      <strong><%= comment.user.username %></strong> commented <%= time_ago_in_words(comment.created_at) %> ago
-     </small>
-   </div>
+<div>
+  <p class="comment-img"><%= image_tag(comment.user.image.url(:thumb)) %></p>
+  <small><strong><%= link_to comment.user.username, user_path(@wiki.user) %></strong> commented <%= time_ago_in_words(comment.created_at) %> ago</small>
+   <% if user_is_authorized_for_comment?(comment) %>
+      <span class="comment-content"><%= link_to "Delete", [comment.wiki, comment], method: :delete, class: 'glyphicon glyphicon-trash', data: { confirm: 'Are you sure you want to delete this comment?' } %></span>
+    <% end %>
+    <p class="comment-body"><%= comment.body %></p>
  </div>
