--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,38 +1,52 @@
 <div class="all-images-btn"> <%= link_to "View All Images", wiki_pic_path(@wiki.pics, @wiki),class: 'btn btn-default' %></div>
   <div class="wiki-image-top"><%= image_tag(@wiki.image.url(:large))%></div>
-  <div class="container">
+  <div class="container wiki-show-body">
     <div class="row col-md-10 wiki-body">
       <div class="wiki-info">
         <%= image_tag(@wiki.user.image.url(:thumb)) %>
+        <div class="user-action">
+          <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+          <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+        </div>
         <h1><%= @wiki.title %></h1>
         <h4 class="small-text"><%= @wiki.description %></h4>
         <h4 class="small-text"><%= @wiki.category.name %></h4>
         <h4 class="wiki-user-username"><%= link_to @wiki.user.username, user_path(@wiki.user) %></h4>
       </div>
-          <h3>
-            <%= pluralize(@wiki.likes, 'like') %>
-          </h3>
+      <div class="wiki-icons">
+        <p class="glyphicon glyphicon-heart"></p>
+        <p class="glyphicon glyphicon-comment"></p>
+        <p class="glyphicon glyphicon-eye-open"></p>
+      </div>
+      <div class="wiki-icons-content">
+          <span class="wiki-icons-tag"><%= pluralize(@wiki.likes, 'like') %></span>
+          <span class="wiki-icons-tag"><%= pluralize(@wiki.comments.count, 'comment') %></span>
+          <span class="wiki-icons-tag"><%= pluralize(@wiki.impressionist_count, 'view') %></span>
+      </div>
+      <div class="wiki-description">
+        <h3>About:</h3>
         <p><%= markdown(@wiki.body) %></p>
-    </div>
+      </div>
+      <div class="side-images">
+      <% @wiki.pics.take(6).each do |pic| %>
+        <div class="row col-sm-6"><%= image_tag(pic.image.url(:thumb)) %></div>
+        <% end %>
+      </div>
     <% if current_user %>
-    <div class="row col-md-10 main" >
+    <div class="comment-form-div">
       <h3>Comments</h3>
-        <div class="row col-md-8">
-          <%= render 'comments/form', comment: Comment.new, wiki: @wiki %>
-        </div>
-        <div class="row col-md-10">
+      <span><%= render 'comments/form', comment: Comment.new, wiki: @wiki %></span>
+    </div>
+        <div class="comments-list">
           <%= render @wiki.comments %>
         </div>
-    </div>
     <% end %>
     <% if user_is_authorized_for_wiki?(@wiki)%>
-    <div class="row col-md-10 main" >
+    <div class="row col-md-10 " >
       <h3>Add Images</h3>
       <%= render 'pics/form', pic: Pic.new, wiki: @wiki %>
     </div>
-    <div class="row col-md-8">
-      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
-    </div>
+  </div>
+</div>
     <% end %>
   </div>
