fix follow/unfollow post action

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,7 +40,7 @@
      </a>
    </div>
 </div>
-<h1 class="container heading-one"> Recently Posted</h1>
+<h1 class="container heading-one"> Recent Logs</h1>
 <%#
 <div class="container captions">
   <h2><%=link_to "Explore", wikis_path%>
