--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_for @wiki, html: { multipart: true } do |f| %>
      <div class="form-group">
        <%= f.label :title %>
-       <%= f.text_field :title, class: 'form-control', placeholder: "Enter Wiki Title"  %>
+       <%= f.text_field :title, class: 'form-control', placeholder: "Log Title"  %>
      </div>
      <div class="form-group">
        <%= f.label "Share your experience" %>
