--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="container title-all">Share Your Adventure</h1>
+<h1 class="container title-all">Log Your Adventure</h1>
    <div>
      <%= render partial: 'wikis/form' %>
    </div>
