--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -58,8 +58,11 @@
 }
 
 .user-description {
-  margin-left: 30px;
-  padding-top: 70px;
+  margin-left: 50px;
+  margin-top: 25px;
+  border: 1px solid rgba(1,1,1,.1);
+  background-color: white;
+  max-width: 600px;
 }
 
 .user-posts-slick {
