--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,23 +10,21 @@
       <img src="https://healthintelasia.com/wp-content/uploads/2013/09/asia-1500-X-600-banner.jpg">
       <div class="carousel-caption">
        <h1 class="top">Welcome to Travelog</h1>
-       <p class="cap">See the world like you've never seen it before</p>
      </div>
    </div>
 
    <div class="item">
       <img src="http://www.moahawaii.org/wp-content/uploads/2013/02/s-nature-bg2-1500x600.jpg">
       <div class="carousel-caption">
-        <h1 class="top">Share</h1>
-        <p class="cap">Upload and share your travel photos to the whole world</p>
+        <h1 class="top">Log Your Adventures</h1>
+        <!--<p class="cap">Upload and share your travel photos to the whole world</p> -->
       </div>
     </div>
 
     <div class="item">
        <img src="http://socahiking.com/wp-content/uploads/2015/01/Soca-valley-Čezsoča-1500x600.jpg">
        <div class="carousel-caption">
-         <h1 class="top">Explore</h1>
-         <p class="cap">See the world through others</p>
+         <h1 class="top">Explore the World</h1>
        </div>
      </div>
 
@@ -40,6 +38,23 @@
      </a>
    </div>
 </div>
+
+<div class="info-one">
+<h1> A whole different way of sharing </h1>
+  <p>Went on an awesome adventure? Share your photos and experience with the whole world.</p>
+  <% if user_signed_in?%>
+    <%= link_to "Share", new_wiki_path %>
+  <% else %>
+    <%= link_to "Get Started", new_user_registration_path %>
+  <% end %>
+  <img src="http://www.e-zone.com.hk//channelnews/20160418200628.jpg">
+</div>
+<div class="info-two">
+  <h1>Discover new places</h1>
+    <p>Explore the world like you've never seen it before</p>
+    <%= link_to "Discover", wikis_path, class: 'btn btn-primary'  %>
+    <img src="https://images.trvl-media.com/media/content/expus/graphics/launch/home/tvly/150324_flights-hero-image_1330x742.jpg">
+  </div>
 <h1 class="container heading-one"> Recent Logs</h1>
 <%#
 <div class="container captions">
@@ -53,13 +68,11 @@
   <img src="http://www.byokids.com.au/wordpress/wp-content/uploads/2-London.jpg" alt="..." class="img-circle circle">
 </div>
 %>
-<div class="welcome-slick">
-  <div class="scroller">
-    <% @wikis.each do |wiki| %>
+<div>
+    <% @wikis.take(3).each do |wiki| %>
       <div>
         <%= image_tag(wiki.image.url(:medium)) %>
         <p class="slick-caption"> <%= link_to wiki.title, wiki_path(wiki) %> </p>
       </div>
   <% end %>
-</div>
 </div>
