--- a/app/views/wikis/_showrecent.html.erb
+++ b/app/views/wikis/_showrecent.html.erb
@@ -1,4 +1,5 @@
-<% @wikis.each do |wiki| %>
+
+<% @wikis.take(3).each do |wiki| %>
     <div class="wiki-style col-sm-3">
         <%= link_to image_tag(wiki.image.url(:medium)), wiki %>
         <div>
