--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,26 +1,17 @@
-<h1 class="wiki-title">Explore</h1>
   <!-- <div class="container col-md-12 wiki-btn">
    <%= link_to "New Post", new_wiki_path, class: 'btn btn-success' %>
  </div> -->
- <% content_for(:sidebar) do %>
-  <%= render partial: 'layouts/sidebar' %>
- <% end %>
-  <div class="main">
-    <h4>Most Recent</h4>
-    <a><%= link_to "Most Popular", wikis_path(:most_popular) %></a>
-      <% @wikis.each do |wiki| %>
-          <div class="wiki-style col-sm-3">
-              <%= link_to image_tag(wiki.image.url(:medium)), wiki %>
-              <div>
-              <span class="link"><%= link_to wiki.title, wiki %></span>
-              <p class="desc-index"><%= wiki.description %> </p>
-              </div>
-              <div class="wiki-details">
-                <small><%=  link_to wiki.user.username, user_path(wiki.user)%></small>
-                <small><%= render partial: 'votes/like', locals: { wiki: wiki } %></small>
-                <small>Posted <%= time_ago_in_words(wiki.created_at) %> ago, </small>
-                <small><%= wiki.impressionist_count %> views</small>
-              </div>
-            </div>
-      <% end %>
-    </div>
+<div class=" container main">
+  <h1 class="index-title">Explore <%= @wikis.count %> adventures</h1>
+  <h4><%= link_to "Most Recent", most_recent_path(@wikis)%></h4>
+    <%= render 'wikis/showrecent' %>
+    <h4><%= link_to "Most Popular", most_popular_path(@wikis)%></h4>
+    <%= render 'wikis/showrecent' %>
+    <% if user_signed_in? %>
+    <h4><%= link_to "Your Likes", likes_path(@wikis)%> </h4>
+    <%= render 'wikis/showrecent'%>
+
+    <h4><%= link_to "Your Followers", followed_users_path(@wikis)%> </h4>
+    <%= render 'wikis/showrecent'%>
+    <% end %>
+  </div>
