add video upload to posts

--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -114,6 +114,12 @@
   margin-left: 30px;
 }
 
+.all-videos-btn {
+  position: absolute;
+  margin-top: 500px;
+  margin-left: 200px;
+}
+
 .link {
   font-size: 22px;
 }
