--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,4 +1,5 @@
 <div class="all-images-btn"> <%= link_to "View All Images", wiki_pic_path(@wiki.pics, @wiki),class: 'btn btn-default' %></div>
+<div class="all-videos-btn"> <%= link_to "View All Videos", wiki_clip_path(@wiki.clips, @wiki),class: 'btn btn-default' %></div>
   <div class="wiki-image-top"><%= image_tag(@wiki.image.url(:large))%></div>
   <div class="container wiki-show-body">
     <div class="row col-md-10 wiki-body">
@@ -16,8 +17,13 @@
         <h4 class="wiki-user-username"><%= link_to @wiki.user.username, user_path(@wiki.user) %></h4>
       </div>
       <div class="side-images">
-      <% @wiki.pics.take(6).each do |pic| %>
-        <div class="row col-sm-6"><%= link_to (image_tag(pic.image.url(:thumb))), pic.image.url(:album), data: {lightbox: "eaxmple-set"}  %></div>
+        <% @wiki.pics.take(6).each do |pic| %>
+          <div class="row col-sm-6"><%= link_to (image_tag(pic.image.url(:thumb))), pic.image.url(:album), data: {lightbox: "eaxmple-set"}  %></div>
+        <% end %>
+      </div>
+      <div class="side-clips">
+        <% @wiki.clips.take(6).each do |clip| %>
+          <div class="row col-sm-6"><%= link_to video_tag(clip.video.url(:thumb)), wiki_clip_path(@wiki.clips, @wiki) %></div>
         <% end %>
       </div>
       <div class="wiki-icons">
@@ -47,8 +53,9 @@
     <div class="row col-md-10 " >
       <h3>Add Images</h3>
       <%= render 'pics/form', pic: Pic.new, wiki: @wiki %>
+      <%= render 'clips/form', clip: Clip.new, wiki: @wiki %>
     </div>
   </div>
 </div>
-    <% end %>
-  </div>
+  <% end %>
+</div>
