--- a/app/views/wikis/most_popular.html.erb
+++ b/app/views/wikis/most_popular.html.erb
@@ -1,4 +1,5 @@
 <div class="container main">
+  <h1 class="title-all">Most Popular Logs</h1>
   <% @wikis.each do |wiki| %>
     <% if wiki.impressionist_count > 10 %>
       <div class="wiki-style col-sm-3">
