--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -161,6 +161,10 @@ text-align: center;
 .avatar-button {
   padding-right: 10px;
   padding-top: 4px;
+
+    button:nth-child(2) {
+      margin-top: 6px;
+    }
 }
 
 .registration {
