--- a/app/assets/stylesheets/pics.scss
+++ b/app/assets/stylesheets/pics.scss
@@ -2,5 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .pic-show {
-  display: block;
+
+    img {
+      padding: 5px;
+      height: 300px;
+      display: inline-block;
+    }
+}
+
+.pic-delete {
+  position: absolute;
+  margin-top: -280px;
+  margin-left: 15px;
 }
