--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,16 +1,18 @@
-<h1 class="wiki-title"><%= @category.name %></h1>
-    <div class="main">
-      <% @category.wikis.each do |wiki| %>
+<div class="container cat-show-view">
+  <h1 class="wiki-title"><%= @category.name %> (<%= @category.wikis.count %> Logs)</h1>
+    <% @category.wikis.each do |wiki| %>
         <div class="wiki-style col-sm-3">
-          <%= link_to image_tag(wiki.image.url(:medium)), wiki %>
-          <%= render partial: 'votes/like', locals: { wiki: wiki } %>
-          </br>
-          <a class="link"><%= link_to wiki.title, wiki %></a>
-          <p>Description:<%= wiki.description %> </p>
-          <p><%= wiki.user.username %></p>
-          <p><%= wiki.comments.count %> Comments</p>
-          <h5>Description:<%= wiki.description %> </h5>
-          <small><%=  wiki.user.username%></small>
-          <small><%= wiki.comments.count %> Comments
-        </div>
-      <% end %>
+            <%= link_to image_tag(wiki.image.url(:medium)), wiki %>
+            <div>
+            <span class="link"><%= link_to wiki.title, wiki %></span>
+            <p class="desc-index"><%= wiki.description %> </p>
+            </div>
+            <div class="wiki-details">
+              <small><%=  link_to wiki.user.username, user_path(wiki.user)%></small>
+              <small><%= render partial: 'votes/like', locals: { wiki: wiki } %></small>
+              <small>Posted <%= time_ago_in_words(wiki.created_at) %> ago, </small>
+              <small><%= wiki.impressionist_count %> views</small>
+            </div>
+          </div>
+    <% end %>
+  </div>
