--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -1,10 +1,13 @@
-<div class="pic-show col-md-4">
+<div class="pic-show">
   <% if @wiki.pics.empty? %>
    <p> No Images Posted<p>
   <% else %>
     <% @wiki.pics.each do |pic| %>
-      <div>
-        <%=link_to (image_tag (pic.image.url(:album))), pic.image.url(:album), data: {lightbox: "eaxmple-set"}%>
+      <div class="row col-md-4">
+        <%=link_to (image_tag (pic.image.url(:album))), pic.image.url(:album), data: {lightbox: "eaxmple-set", title: pic.caption }%>
+        <div class="pic-delete">
+          <%= link_to "Delete", [pic.wiki, pic], method: :delete, class: 'btn btn-danger' %>
+        </div>
       </div>
     <% end %>
   <% end %>
