--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -57,8 +57,8 @@
     <%= link_to "Discover", wikis_path, class: 'btn btn-primary'  %>
     <img src="https://images.trvl-media.com/media/content/expus/graphics/launch/home/tvly/150324_flights-hero-image_1330x742.jpg">
   </div>
-  <div>
-    <h1 class="container heading-one"> Recent Logs</h1>
+  <div class="recent-log-container">
+    <h1 class="container recent-log-heading"> Recent Logs</h1>
 <%#
 <div class="container captions">
   <h2><%=link_to "Explore", wikis_path%>
@@ -71,12 +71,11 @@
   <img src="http://www.byokids.com.au/wordpress/wp-content/uploads/2-London.jpg" alt="..." class="img-circle circle">
 </div>
 %>
-<div>
-    <% @wikis.take(3).each do |wiki| %>
-      <div>
-        <%= image_tag(wiki.image.url(:medium)) %>
-        <p class="slick-caption"> <%= link_to wiki.title, wiki_path(wiki) %> </p>
-      </div>
-  <% end %>
-</div>
+  <div class="logs-recent">
+      <% @wikis.take(3).each do |wiki| %>
+        <div class="logs-all">
+          <%= link_to image_tag(wiki.image.url(:medium)), wiki_path(wiki) %>
+        </div>
+    <% end %>
+  </div>
 </div>
