--- a/app/views/clips/_form.html.erb
+++ b/app/views/clips/_form.html.erb
@@ -7,5 +7,5 @@
      <%= f.label :video %>
      <%= f.file_field :video%>
    </div>
-   <%= f.submit "Submit", class: 'btn btn-default pull-right' %>
+   <%= f.submit "Upload", class: 'btn btn-default pull-right' %>
  <% end %>
