--- a/app/views/pics/_form.html.erb
+++ b/app/views/pics/_form.html.erb
@@ -5,7 +5,7 @@
    </div>
    <div class="form-group">
      <%= f.label :image %>
-     <%= f.file_field :image%>
+     <%= f.file_field :image, multiple: true %>
    </div>
    <%= f.submit "Submit", class: 'btn btn-default pull-right' %>
  <% end %>
