--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,9 @@
         <ul class="dropdown-menu" data-behavior="notification-items">
         </ul>
       </div>
+      <div class="message-btn pull-right">
+        <%= link_to "", conversations_path, class: 'glyphicon glyphicon-envelope' %>
+      </div>
      <% else %>
       <li role="presentation"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
       <li role="presentation"> <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %> </li>
