--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,9 @@
             <%= link_to 'Follow', follow_user_path(@user.username), remote: true, class: 'btn follow-button', id: 'follow-button', method: :post %>
           <% end %>
         <% end %>
+        <div class="msg-btn">
+          <%= link_to 'Message', conversations_path(sender_id: current_user.id, recipient_id: @user.id), method: 'post', class: 'btn btn-primary' %>
+        </div>
 
 
       </div>
