--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -295,3 +295,25 @@ footer {
     font-size: 20px;
   }
 }
+
+.how-info {
+  text-align: center;
+  height: 400px;
+  background-color: rgba(1,1,1,.2);
+}
+
+.info-row {
+  display: -webkit-box;
+  margin-left: 143px;
+
+  .glyphicon {
+    font-size: 150px;
+    color: white;
+    padding: 15px;
+    margin: 10px;
+    }
+}
+
+.info-group {
+  margin-left: 140px;
+}
